# extorch

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  RELEASE_NOTES_0.3.0.md  blog_post.md  mix.exs
bench/: ab_fixes.exs  inference.exs  inference.py  inference_aoti_gpu.exs  inference_aoti_gpu.py  inference_fast.exs  inference_gpu.exs  inference_gpu.py  layer_overhead.exs  prepack_probe.exs  profile.exs  raw_op.exs  raw_op.py  raw_op_gpu.exs  raw_op_gpu.py
lib/: native.ex  (+1 more)
native/extorch/: Cargo.toml  README.md  build.rs
native/extorch/include/: aoti.h  common.h  comparison.h  creation.h  dispatcher.h  info.h  ivalue_utils.h  jit.h  manipulation.h  mutating.h  nn.h  other.h  pointwise.h  printing.h  reduction.h  utils.h  wrapper.h
native/extorch/src/: encoding.rs  lib.rs  macros.rs  native.rs  nifs.rs  shared_types.rs
native/extorch/src/csrc/: aoti.cc  comparison.cc  creation.cc  dispatcher.cc  info.cc  ivalue_utils.cc  jit.cc  manipulation.cc  mutating.cc  nn.cc  other.cc  pointwise.cc  printing.cc  reduction.cc  utils.cc  wrapper.cc
native/extorch/src/encoding/: info.rs  jit.rs  misc.rs  tensor.rs
native/extorch/src/native/: aoti.rs.in  definitions.rs.in  dispatcher.rs.in  jit.rs.in  native.rs.in  nn.rs.in
native/extorch/src/native/tensor/: comparison.rs.in  creation.rs.in  info.rs.in  mutating.rs.in  ops.rs.in  other.rs.in  pointwise.rs.in  reduction.rs.in
native/extorch/src/nifs/: aoti.rs  binary.rs  comparison.rs  creation.rs  dispatcher.rs  info.rs  jit.rs  mutating.rs  nn.rs  other.rs  pointwise.rs  reduction.rs  tensor_ops.rs
native/extorch_native/: Cargo.toml  README.md  build.rs
native/extorch_native/include/: common.h  creation.h  info.h  utils.h  wrapper.h
native/extorch_native/native/: definitions.rs.in
native/extorch_native/src/: conversion.rs  lib.rs  macros.rs  native.rs  nifs.rs  shared_types.rs  wrapper.cc
native/extorch_native/src/conversion/: advanced_types.rs  dtypes.rs  info_types.rs  scalar_types.rs
native/extorch_native/src/csrc/: creation.cc  info.cc  utils.cc  wrapper.cc
native/extorch_native/src/native/: native.rs.in
native/extorch_native/src/native/tensor/: creation.rs.in  info.rs.in
native/extorch_native/src/nifs/: creation.rs  info.rs  tensor_ops.rs
(+114 files in other folders)
