[package]
name = "extorch"
version = "0.1.0"
authors = []
edition = "2021"
links = "torch"

[lib]
name = "extorch"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.26.0"
rustler_sys = "2.2"
lazy_static = "1.4.0"
libc = "0.2.139"
cxx = "1.0.85"

[build-dependencies]
cxx-build = {version = "1.0.85", features = ["parallel"]}
tera = "1.17.1"
