[package]
name = "extorch"
version = "0.1.0"
authors = []
edition = "2021"
links = "torch"

[lib]
name = "extorch"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.37.3"
lazy_static = "1.5.0"
libc = "0.2.169"
cxx = "1.0.194"

[build-dependencies]
cxx-build = {version = "1.0.194", features = ["parallel"]}
tera = "1.20.0"
rustc-hash = "2.1.2"
glob = "0.3.1"
prettyplease = "0.2.37"
syn = "2.0.117"
