[package]
name = "extorch_native"
version = "0.1.0"
authors = []
edition = "2018"
links = "torch"

[lib]
name = "extorch_native"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = "0.21.1"
lazy_static = "1.4.0"
libc = "0.2.81"
cxx = "1.0.14"

[build-dependencies]
cxx-build = "1.0.14"

# [profile.dev]
# rpath = true
