[package]
name = "extorch_native"
version = "0.1.0"
authors = []
edition = "2018"
links = "torch"

[lib]
name = "extorch_native"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = "0.21.1"
rustler_sys = "2.1.0"
lazy_static = "1.4.0"
libc = "0.2.81"
cxx = "1.0.42"

[build-dependencies]
cxx-build = {version = "1.0.42", features = ["parallel"]}
tera = "1.7.0"

# [profile.dev]
# rpath = true
